lang/checker/tests/cases/fail/resolve-type-match/types/union.slt
type A = void | string
local a: A = 10